dts/testData/inspections/requiredProperty/DeleteProperty.dts
/include/ "Declaration.dtsi"

&lable {
    phy-handle = "";
};

<error descr="Missing required properties: \"phy-handle\"">&lable</error> {
    /delete-property/ phy-handle;
};